# httpserver

./: CMakeLists.txt  README.md  main.cpp
cmake/: functions.cmake
foundation/: CMakeLists.txt
foundation/http/: dispatcher.h  fcgi.cpp  fcgi.h  httpget.cpp  httpget.h  httppost.cpp  httppost.h  httpresponse.cpp  httpresponse.h  urldecode.cpp  urldecode.h
foundation/log/: log.cpp  log.h
handle/: CMakeLists.txt  gethandle.cpp  gethandle.h  posthandle.cpp  posthandle.h
